<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="E_ProductType" Id="{9c1feb2b-dfc4-4862-b43c-fe4e26d65056}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ProductType :
(
	None:= 0,
	Left,
	Right
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>